<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue_background"
    tools:context=".fragmentsMyLocation.mylocations_add_location_basicdetails">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp">

        <ImageView
            android:id="@+id/btn_backprevious"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:tint="#526D82"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <ImageView
            android:id="@+id/btn_closeToMenu"
            android:layout_marginStart="275dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:tint="#526D82"
            android:src="@drawable/baseline_close_24" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addmylocationbasicdetails_texto1"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/type_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addmylocationbasicdetails_texto2"
        android:textColor="#526D82"
        android:paddingBottom="24dp"
        android:background="@drawable/editext_background"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/type_housewpool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addmylocationbasicdetails_texto3"
        android:textColor="#526D82"
        android:paddingBottom="24dp"
        android:background="@drawable/editext_background"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/type_mansion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addmylocationbasicdetails_texto4"
        android:textColor="#526D82"
        android:paddingBottom="24dp"
        android:background="@drawable/editext_background"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/type_partyroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addmylocationbasicdetails_texto5"
        android:textColor="#526D82"
        android:paddingBottom="24dp"
        android:background="@drawable/editext_background"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/type_farm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addmylocationbasicdetails_texto6"
        android:textColor="#526D82"
        android:paddingBottom="24dp"
        android:background="@drawable/editext_background"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="18dp" />

</LinearLayout>