<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/sheet_dialog_close_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/dialogsheetclose_texto1"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:textSize="25dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/dialogsheetclose_texto2"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            style="@android:style/Widget.Button"
            android:backgroundTint="@color/white"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_btn_continue"
            android:text="@string/dialogsheetclose_button1"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close"
            style="@android:style/Widget.Button"
            android:backgroundTint="@color/blue"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_btn_continue"
            android:text="@string/dialogsheetclose_button2"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>

</LinearLayout>