<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_photo_username"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/dialogcdisapproved_texto"
        android:textColor="@color/black"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:textSize="18dp" />


    <EditText
        android:id="@+id/edittext_add_description"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#454545"
        android:textColorHint="#454545"
        android:layout_marginTop="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="16dp"
        android:maxLines="1"
        android:hint="@string/dialogcdisapproved_edittext"
        android:background="@drawable/bg_edittext_property"
        android:textSize="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_send"
        style="@android:style/Widget.Button"
        android:backgroundTint="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_btn_continue"
        android:text="@string/dialogcdisapproved_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>