<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.LocationActy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp">

        <ImageView
            android:id="@+id/btn_backprevious"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:tint="#526D82"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

        <ImageView
            android:id="@+id/btn_closeToMenu"
            android:layout_marginStart="285dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:tint="#526D82"
            app:srcCompat="@drawable/baseline_close_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_Location"
        android:textColor="#6672FF"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_entrydate"
        android:textStyle="bold"
        android:textColor="#526D82"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="22dp"
        android:textSize="19dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="18dp">

        <Button
            android:id="@+id/btn_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/location_select"/>

        <TextView
            android:id="@+id/text_entrydate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="00/00/0000"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_exitdate"
        android:textStyle="bold"
        android:textColor="#526D82"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:textSize="19dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="18dp">

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/location_select"/>

        <TextView
            android:id="@+id/text_exitdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="00/00/0000"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:text="@string/location_confirm"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/background_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</LinearLayout>